Light Mode and Dark Mode correction

--- a/client/src/components/About/About.css
+++ b/client/src/components/About/About.css
@@ -10,6 +10,12 @@
 .bg2 {
   background-color: var(--white-color);
 }
+.bg3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+}
 .linear_bg {
   background: linear-gradient(
     180deg,
@@ -38,7 +44,7 @@
 .about_head_container h2 {
   font-size: 3rem;
   font-weight: 500;
-  width: 50%;
+  width: 70%;
   margin-bottom: 10px;
 }
 .about_head_container p {
