--- a/client/src/components/Login/login.css
+++ b/client/src/components/Login/login.css
@@ -3,7 +3,7 @@
   --loginbg: #fff7f7;
 }
 .dark-theme {
-  --loginbg: #fff1cc;
+  --loginbg: #000;
 }
 
 .login {
